# legal-engineering-system

./: .gitignore  CLAUDE.md  CONNECTORS.md  LICENSE  README.md  registry.json  spec.md  system-design.md
.claude-plugin/: marketplace.json
cross-border-wealth/: .gitignore  .mcp.json  CLAUDE.md  README.md
cross-border-wealth/.claude-plugin/: plugin.json
cross-border-wealth/agents/: adversary.md  advocate.md  case-researcher.md  citation-checker.md  compliance.md  data-protection.md  drafter.md  fiscal-specialist.md  judicial-analyst.md  orchestrator.md  regulatory-monitor.md  translator.md  treaty-watcher.md
cross-border-wealth/hooks/: hooks.json
cross-border-wealth/references/: dashboard-template.md  guardrails.md  jurisdiction-profiles.md  litigation-star-atlas.md  matter-template.md  pillar-two-tracker.md  report-template.html  substance-requirements.md  treaty-network.md
legal-pathways/: .gitignore  .mcp.json  CLAUDE.md  README.md
legal-pathways/.claude-plugin/: plugin.json
legal-pathways/agents/: compliance-analyst.md  pathway-researcher.md
legal-pathways/hooks/: hooks.json  privacy-check.sh
scripts/: eval-framework.md  validate.py
westlaw-mcp/: README.md  pyproject.toml
westlaw-mcp/westlaw_mcp/: __init__.py  __main__.py  circuit_breaker.py  errors.py  models.py  server.py
westlaw-mcp/westlaw_mcp/clients/: __init__.py  base.py  congress.py  courtlistener.py  ecfr.py  eu_compliance.py  eurlex.py  federal_register.py  oecd_treaties.py  sec_edgar.py  singapore_elit.py  taiwan_judicial.py  westlaw_classic.py
(+54 files in other folders)
