[project]
name = "westlaw-mcp"
version = "0.1.0"
description = "Unified legal research MCP server — WestLaw Classic, CourtListener, Congress.gov, Federal Register, eCFR, EUR-Lex, Taiwan Judicial Yuan, EU Compliance, OECD Tax Treaties, SEC EDGAR, Singapore eLitigation"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
captcha = ["ddddocr>=1.4.0"]

[project.scripts]
westlaw-mcp = "westlaw_mcp:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
